<resources>
    <string name="app_name">GetYourCasts</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_podcast">MainPodcastActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="search_str">Search</string>
    <string name="title_activity_podcast_detail_layout">PodcastDetailActivity</string>
    <string name="descriotion_title_str">Description</string>
    <string name="total_episodes">Total Episodes</string>
    <string name="no_results_found">No Results Found</string>
    <string name="title_activity_episode_list_details">EpisodeListDetailsActivity</string>
    <string name="title_activity_episode_info">EpisodeInfoActivity</string>
    <string name="release_date_str">Release Date</string>
    <string name="ep_info_file_size">Media Info</string>
    <string name="download_in_prog">Download In Progress</string>
    <string name="download_complete">Download Complete</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="no_songs_to_playlist">No more song to play in playlist.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_update_list">UpdateListActivity</string>
    <string name="update_avail_str">New Podcast Updates Available</string>
    <string name="update_str">New Episodes</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="drawer_download_str">Downloaded Episodes</string>
    <string name="drawer_playlist_str">Playlist</string>
    <string name="drawer_find_new_podcast_str">Find New Podcast</string>
    <string name="title_activity_downloads">DownloadsActivity</string>
    <string name="downloaded_eps_str">Downloaded Episodes</string>
    <string name="all_podcast_str">ALL PODCASTS</string>
    <string name="download_cancelled">Download Cancelled</string>
    <string name="ok_string">OK</string>
    <string name="network_connection_error">No Network Connection !!</string>
    <string name="show_menu_btn_content">Show Menu Button</string>
    <string name="display_episode_podcast_img_content">Show Podcast Image</string>
    <string name="press_button_to_prev_content">Press Button To Close Search Screen</string>
    <string name="btn_add_to_play_list">Add this Episode to current playlist !</string>
    <string name="show_nv_pane_str">Show Navigation Pane from the left !</string>
    <string name="btn_search_podcast_str">Search for Podcast Button</string>
    <string name="btn_close_media_player_str">Close Media Player Activity</string>
    <string name="widget_podcast_img">Widget Podcast Image</string>
    <string name="widget_prev_button">Play previous episode in playlist</string>
    <string name="widget_next_button">Play next episode in the list !</string>
    <string name="btn_play_pause">Play or Pause Button</string>
    <string name="subscribed_pod_img_str">Subscribed Podcast Image</string>
    <string name="btn_remove_episode">Delete Downloaded Episode</string>
    <string name="btn_down_or_play_str">Download Or Play Button !</string>
    <string name="btn_remove_item_from_playlist">Remove this Episode from playlist</string>
    <string name="widget_play_pause_btn">Play or Pause Episode Button</string>
    <string name="widget_play_btn">Play current episode</string>
    <string name="widget_pause_btn">Pause Current Episode</string>
    <string name="media_player_shutter_img">Media Player Shutter Image</string>
    <string name="error_empty_playlist">Playlist is Empty !</string>
    <string name="episode_str">Episodes</string>
    <string name="btn_ep_fab_str">Download or Play Episode Action button</string>
    <string name="btn_subscribe_str">Subscribe to Podcast Button</string>
    <string name="empty_play_list_str">Playlist is empty</string>
    <string name="subscribe_podcast_content">Subscribe this podcast</string>
    <string name="no_downloaded_episodes_available_str">No Episode Has Been Downloaded !</string>
    <string name="notification_play">Notification Play Button</string>
    <string name="notification_prev">notification previous</string>
    <string name="notification_next">Notification Next Button</string>
    <string name="notification_pause">Notification Pause Button</string>
</resources>
