
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/widget_width"
    android:layout_height="@dimen/widget_height"
    android:background="@color/transparent"
    >
    <LinearLayout
        android:id="@+id/widget_playback_control"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/widget_img"
            android:contentDescription="@string/widget_podcast_img"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/super_tiny_margin"
            android:layout_width="@dimen/widget_img_size"
            android:layout_height="@dimen/widget_img_size"/>

        <ImageButton
            android:id="@+id/widget_prev_btn"
            android:src="@mipmap/ic_media_skip_prev"
            android:contentDescription="@string/widget_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ImageButton
            android:id="@+id/widget_play_pause_btn"
            android:src="@mipmap/ic_media_play"
            android:contentDescription="@string/widget_play_pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/widget_next_btn"
            android:src="@mipmap/ic_media_next"
            android:contentDescription="@string/widget_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/widget_empty_view"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic"
        android:text="@string/empty_play_list_str"
        />
</FrameLayout>


