<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false">

    <android.support.design.widget.CoordinatorLayout

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/episode_info_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:visibility="invisible"
        tools:context="getyourcasts.jd.com.getyourcasts.view.SearchPodcastFragment">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/ep_info_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.NoActionBar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_scrollFlags="exitUntilCollapsed">

                <ImageView
                    android:id="@+id/ep_info_img"
                    android:layout_width="@dimen/podcast_detail_img_size"
                    android:layout_height="@dimen/podcast_detail_img_size"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/display_episode_podcast_img_content"
                    android:layout_margin="@dimen/small_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/small_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ep_info_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/tiny_margin"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>


                    <ImageView
                        android:id="@+id/add_to_playlist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:src="@mipmap/ic_add_to_play_list"
                        android:contentDescription="@string/btn_add_to_play_list"
                        android:visibility="gone"/>


                </LinearLayout>


            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/episode_info_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:id="@+id/ep_info_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                >




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:text="@string/release_date_str"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/ep_info_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorBlack"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_thick"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@color/gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:text="@string/ep_info_file_size"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/ep_info_media_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorBlack"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_thick"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@color/gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:text="@string/descriotion_title_str"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/ep_info_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorBlack"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_thick"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@color/gray"/>

            </LinearLayout>
        </ScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/ep_info_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:backgroundTint="@color/fab_subscribed_color"
            app:borderWidth="0dp"
            app:elevation="@dimen/fab_elevate"
            app:layout_anchor="@id/ep_info_app_bar"
            app:layout_anchorGravity="bottom|right|end"
            />


    </android.support.design.widget.CoordinatorLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/episode_info_loading_anim"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="visible"
        app:indicatorColor="@color/colorWhite"
        app:indicatorName="BallPulseIndicator"
        />


</FrameLayout>